--- a/TaskTwo/TaskTwo_ContractValuation.ipynb
+++ b/TaskTwo/TaskTwo_ContractValuation.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 186,
+      "execution_count": 103,
       "metadata": {
         "id": "AvSF14wkK9GK"
       },
@@ -68,9 +68,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PyRTXmp0PXdB",
-        "outputId": "9c41f841-ff42-4c61-db25-5b4813b5e614"
+        "outputId": "4a1ffa55-9ece-4523-9bfe-182831cdee5c"
       },
-      "execution_count": 187,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,30 +93,38 @@
     {
       "cell_type": "code",
       "source": [
-        "def calc_storage_cost_and_drain(curr_vol: int, drain_time: int, gas_rate_tput: int, storage_cost: float) -> tuple:\n",
+        "def calc_storage_cost_and_drain(curr_vol: int, drain_time: int, GAS_RATE_TPUT: int, STORAGE_COST: float) -> tuple:\n",
         "    \"\"\"\n",
         "    as long as tank is not empty, add a day's cost, reduce tank volume\n",
         "    return tuple of (vol_sold, curr_vol, total_cost)\n",
         "    \"\"\"\n",
-        "    total_cost = 0.0 # amount that was paid in storage costs\n",
+        "    if curr_vol == 0:\n",
+        "        return 0, 0, 0\n",
         "    # calculate P/L selling the contract outside this function\n",
         "    # with vol_sold * sale_price\n",
+        "    initial_vol = curr_vol\n",
         "    vol_sold = curr_vol\n",
+        "    days_used_drain = 0\n",
         "    # drain the tank\n",
         "    for i in range(drain_time):\n",
-        "        total_cost = total_cost + storage_cost\n",
-        "        if curr_vol >= gas_rate_tput:\n",
-        "            curr_vol -= gas_rate_tput\n",
+        "        if curr_vol > GAS_RATE_TPUT:\n",
+        "            curr_vol -= GAS_RATE_TPUT\n",
         "        else:\n",
         "            curr_vol = 0\n",
+        "            days_used_drain = i + 1\n",
+        "            break\n",
         "\n",
-        "    vol_sold -= curr_vol\n",
+        "    total_cost = days_used_drain * STORAGE_COST\n",
+        "\n",
+        "    vol_sold = initial_vol - curr_vol\n",
+        "    print(f'days_used to fill tank = {days_used_drain}')\n",
+        "\n",
         "    return vol_sold, curr_vol, total_cost"
       ],
       "metadata": {
         "id": "uL1WvTMTrs2T"
       },
-      "execution_count": 188,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -129,28 +137,36 @@
     {
       "cell_type": "code",
       "source": [
-        "def calc_volume_and_buy(curr_vol: int, fill_time: int, gas_rate_tput: int, max_vol: int) -> tuple:\n",
+        "def calc_volume_and_buy(curr_vol: int, fill_time: int, GAS_RATE_TPUT: int, MAX_VOL: int) -> tuple:\n",
         "    \"\"\"\n",
         "    fill the tank as long as it is not full\n",
         "    return tuple of (vol_bought, curr_vol, total_cost)\n",
         "    \"\"\"\n",
-        "    total_cost = 0 # amount that could be bought * buy_price\n",
+        "    if curr_vol == MAX_VOL or fill_time == 0:\n",
+        "        return 0, 0, 0\n",
+        "\n",
         "    vol_bought = 0\n",
+        "    days_used_fill = 0\n",
+        "\n",
         "    # fill the tank\n",
         "    for i in range(fill_time):\n",
-        "        if curr_vol + gas_rate_tput <= max_vol:\n",
-        "            vol_bought += gas_rate_tput\n",
-        "            curr_vol += gas_rate_tput\n",
+        "        if curr_vol + GAS_RATE_TPUT < MAX_VOL:\n",
+        "            vol_bought += GAS_RATE_TPUT\n",
+        "            curr_vol += GAS_RATE_TPUT\n",
         "        else:\n",
-        "            vol_bought += max_vol - curr_vol\n",
-        "            curr_vol = max_vol\n",
+        "            vol_bought += MAX_VOL - curr_vol\n",
+        "            curr_vol = MAX_VOL\n",
+        "            days_used_fill = i + 1\n",
+        "            break\n",
         "\n",
+        "    total_cost = days_used_fill * STORAGE_COST\n",
+        "    print(f'days_used to drain tank = {days_used_fill}')\n",
         "    return vol_bought, curr_vol, total_cost"
       ],
       "metadata": {
         "id": "8ZKRgx0nvFKz"
       },
-      "execution_count": 189,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -158,15 +174,15 @@
       "source": [
         "from price_predict import run_holt_winters\n",
         "\n",
-        "def price_contract(inj_dates: list, wth_dates: list, gas_rate_tput: int, max_vol: int, storage_cost: float) -> float:\n",
+        "def price_contract(inj_dates: list, wth_dates: list, GAS_RATE_TPUT: int, MAX_VOL: int, STORAGE_COST: float) -> float:\n",
         "    \"\"\"\n",
         "    Inputs:\n",
         "    inj_dates:     list of injection dates  (sort earliest to latest)\n",
         "    wth_dates:     list of withdrawal dates (sort earliest to latest)\n",
-        "    gas_rate_tput: rate at which the gas can be injected/withdrawn\n",
+        "    GAS_RATE_TPUT: rate at which the gas can be injected/withdrawn\n",
         "                        defining this as daily rate\n",
-        "    max_vol:       maximum volume that can be stored\n",
-        "    storage_cost:  cost of storage\n",
+        "    MAX_VOL:       maximum volume that can be stored\n",
+        "    STORAGE_COST:  cost of storage\n",
         "                        going to define as cost per day to use tank of capacity max_vol\n",
         "\n",
         "    Calculate:\n",
@@ -212,6 +228,8 @@
         "    count = 0\n",
         "    prev_sell_date_j = None\n",
         "    sell_price_j = 0.0\n",
+        "    inj_date_i = None\n",
+        "\n",
         "    for inj_date_i, wth_date_j in zip(inj_dates, wth_dates):\n",
         "\n",
         "        # calc draining oil from previous sell date\n",
@@ -220,26 +238,30 @@
         "        if count > 0:\n",
         "            drain_time = (inj_date_i - prev_sell_date_j).days\n",
         "            # calculate the storage cost of the draining supply\n",
-        "            vol_sold, curr_tank_vol, store_cost = calc_storage_cost_and_drain(\n",
-        "                curr_tank_vol, drain_time, gas_rate_tput, storage_cost\n",
+        "            vol_sold, curr_tank_vol, store_cost_drain = calc_storage_cost_and_drain(\n",
+        "                curr_tank_vol, drain_time, GAS_RATE_TPUT, STORAGE_COST\n",
         "            )\n",
-        "            storage_cost_total += store_cost\n",
+        "            storage_cost_total += store_cost_drain\n",
+        "            print(f'storage cost total after sell and drain #{count}: ${storage_cost_total:.2f}')\n",
+        "\n",
         "            # P/L from the amount we could sell\n",
         "            contract_value += sell_price_j * vol_sold\n",
         "            print(f\"The contract is worth ${contract_value:.2f}\\n\")\n",
         "\n",
         "        time_duration = (wth_date_j - inj_date_i).days\n",
-        "        print(f'inj_date_i = {inj_date_i}')\n",
-        "        print(f'wth_date_j = {wth_date_j}')\n",
         "        print(f'time_duration = {time_duration}')\n",
         "\n",
         "        # fill up the tank\n",
         "        # 0 <= {vol_actual, curr_tank_vol} <= max_vol\n",
         "        vol_bought, curr_tank_vol, buy_cost = calc_volume_and_buy(\n",
-        "            curr_tank_vol, time_duration, gas_rate_tput, max_vol\n",
+        "            curr_tank_vol, time_duration, GAS_RATE_TPUT, MAX_VOL\n",
         "        )\n",
         "        print(f'vol_bought = {vol_bought}')\n",
         "        print(f'curr_tank_vol = {curr_tank_vol}')\n",
+        "\n",
+        "        store_cost_fill = time_duration * STORAGE_COST\n",
+        "        storage_cost_total += store_cost_fill\n",
+        "        print(f'storage cost total after buy #{count}: ${storage_cost_total:.2f}')\n",
         "\n",
         "        # retrieve buy_price_i and sell_price_i from Holt-Winters price pred. model\n",
         "        buy_price_i = run_holt_winters(inj_date_i, df)\n",
@@ -252,7 +274,6 @@
         "        # to see draining time and costs\n",
         "        contract_value -= buy_price_i * vol_bought\n",
         "        # print(f'contract_value = {contract_value}')\n",
-        "        print(f'storage_cost_total = ${storage_cost_total:.2f}\\n')\n",
         "\n",
         "        count += 1\n",
         "        prev_sell_date_j = wth_date_j\n",
@@ -261,25 +282,28 @@
         "    if prev_sell_date_j:\n",
         "        sell_price = run_holt_winters(prev_sell_date_j, df)\n",
         "        # calc storage cost during final drainage\n",
-        "        drain_time = int(np.ceil(curr_tank_vol / gas_rate_tput))\n",
+        "        drain_time = int(np.ceil(curr_tank_vol / GAS_RATE_TPUT))\n",
         "\n",
         "        # calculate the storage cost of the draining supply\n",
-        "        vol_sold, curr_tank_vol, store_cost = calc_storage_cost_and_drain(\n",
-        "            curr_tank_vol, drain_time, gas_rate_tput, storage_cost\n",
+        "        vol_sold, curr_tank_vol, store_cost_drain = calc_storage_cost_and_drain(\n",
+        "            curr_tank_vol, drain_time, GAS_RATE_TPUT, STORAGE_COST\n",
         "        )\n",
+        "\n",
         "        contract_value += sell_price * vol_sold\n",
-        "        storage_cost_total += store_cost\n",
+        "        storage_cost_total += store_cost_drain\n",
+        "\n",
+        "        print(f'storage cost total after sell #{count}: ${storage_cost_total:.2f}')\n",
         "\n",
         "    # subtract storage costs from the contract at the end\n",
-        "    print(f'Total storage costs: ${storage_cost_total:.2f}')\n",
+        "    print(f\"\\nTotal storage costs: ${storage_cost_total:.2f}\")\n",
         "    contract_value -= storage_cost_total\n",
-        "    print(f\"The contract is worth ${contract_value:.2f}\\n\")\n",
+        "    print(f\"\\nThe contract is worth ${contract_value:.2f} with PnL's minus storage costs\\n\")\n",
         "    return contract_value\n"
       ],
       "metadata": {
         "id": "wNLRY1nmLaKm"
       },
-      "execution_count": 190,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -289,10 +313,10 @@
         "# testing all in bounds, buy then sell without overlap\n",
         "inj_dates = [\"2020-10-11\", \"2021-04-05\", \"2022-08-09\", \"2023-10-01\", \"2024-09-09\"]\n",
         "wth_dates = [\"2021-02-02\", \"2022-06-27\", \"2023-06-06\", \"2024-01-24\", \"2024-10-10\"]\n",
-        "gas_rate_tput = 1000 # per day\n",
-        "max_vol = 100000     # tank total\n",
-        "storage_cost = 100   # per day\n",
-        "contract_value = price_contract(inj_dates, wth_dates, gas_rate_tput, max_vol, storage_cost)\n",
+        "GAS_RATE_TPUT = 10000 # per day\n",
+        "MAX_VOL = 100000     # tank total\n",
+        "STORAGE_COST = 100   # per day\n",
+        "contract_value = price_contract(inj_dates, wth_dates, GAS_RATE_TPUT, MAX_VOL, STORAGE_COST)\n",
         "# print(f\"The contract is worth ${contract_value:.2f}\\n\")"
       ],
       "metadata": {
@@ -300,80 +324,82 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "90vwfKMsN34u",
-        "outputId": "f20956d4-081b-4545-90b3-c7cc144f8eff"
+        "outputId": "a5dd323f-b2b9-48dc-8733-10d5b38444ca"
       },
-      "execution_count": 192,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "inj_date_i = 2020-10-11 00:00:00\n",
-            "wth_date_j = 2021-02-02 00:00:00\n",
             "time_duration = 114\n",
+            "days_used to drain tank = 10\n",
             "vol_bought = 100000\n",
             "curr_tank_vol = 100000\n",
+            "storage cost total after buy #0: $11400.00\n",
             "On 2020-10-11 00:00:00, the expected gas price is $10.10\n",
             "On 2021-02-02 00:00:00, the expected gas price is $10.90\n",
             "buy_price_i = 10.1\n",
             "sell_price_j = 10.9\n",
-            "storage_cost_total = $0.00\n",
+            "days_used to fill tank = 10\n",
+            "storage cost total after sell and drain #1: $12400.00\n",
+            "The contract is worth $80000.00\n",
             "\n",
-            "The contract is worth $-334200.00\n",
-            "\n",
-            "inj_date_i = 2021-04-05 00:00:00\n",
-            "wth_date_j = 2022-06-27 00:00:00\n",
             "time_duration = 448\n",
-            "vol_bought = 62000\n",
+            "days_used to drain tank = 10\n",
+            "vol_bought = 100000\n",
             "curr_tank_vol = 100000\n",
+            "storage cost total after buy #1: $57200.00\n",
             "On 2021-04-05 00:00:00, the expected gas price is $10.40\n",
             "On 2022-06-27 00:00:00, the expected gas price is $10.40\n",
             "buy_price_i = 10.4\n",
             "sell_price_j = 10.4\n",
-            "storage_cost_total = $6200.00\n",
+            "days_used to fill tank = 10\n",
+            "storage cost total after sell and drain #2: $58200.00\n",
+            "The contract is worth $80000.00\n",
             "\n",
-            "The contract is worth $-531800.00\n",
-            "\n",
-            "inj_date_i = 2022-08-09 00:00:00\n",
-            "wth_date_j = 2023-06-06 00:00:00\n",
             "time_duration = 301\n",
-            "vol_bought = 43000\n",
+            "days_used to drain tank = 10\n",
+            "vol_bought = 100000\n",
             "curr_tank_vol = 100000\n",
+            "storage cost total after buy #2: $88300.00\n",
             "On 2022-08-09 00:00:00, the expected gas price is $10.40\n",
             "On 2023-06-06 00:00:00, the expected gas price is $10.90\n",
             "buy_price_i = 10.4\n",
             "sell_price_j = 10.9\n",
-            "storage_cost_total = $10500.00\n",
+            "days_used to fill tank = 10\n",
+            "storage cost total after sell and drain #3: $89300.00\n",
+            "The contract is worth $130000.00\n",
             "\n",
-            "The contract is worth $111000.00\n",
-            "\n",
-            "inj_date_i = 2023-10-01 00:00:00\n",
-            "wth_date_j = 2024-01-24 00:00:00\n",
             "time_duration = 115\n",
+            "days_used to drain tank = 10\n",
             "vol_bought = 100000\n",
             "curr_tank_vol = 100000\n",
+            "storage cost total after buy #3: $100800.00\n",
             "On 2023-10-01 00:00:00, the expected gas price is $11.80\n",
             "On 2024-01-24 00:00:00, the expected gas price is $12.60\n",
             "buy_price_i = 11.8\n",
             "sell_price_j = 12.6\n",
-            "storage_cost_total = $22200.00\n",
+            "days_used to fill tank = 10\n",
+            "storage cost total after sell and drain #4: $101800.00\n",
+            "The contract is worth $210000.00\n",
             "\n",
-            "The contract is worth $191000.00\n",
-            "\n",
-            "inj_date_i = 2024-09-09 00:00:00\n",
-            "wth_date_j = 2024-10-10 00:00:00\n",
             "time_duration = 31\n",
-            "vol_bought = 31000\n",
-            "curr_tank_vol = 31000\n",
+            "days_used to drain tank = 10\n",
+            "vol_bought = 100000\n",
+            "curr_tank_vol = 100000\n",
+            "storage cost total after buy #4: $104900.00\n",
             "On 2024-09-09 00:00:00, the expected gas price is $11.80\n",
             "On 2024-10-10 00:00:00, the expected gas price is $12.10\n",
             "buy_price_i = 11.8\n",
             "sell_price_j = 12.103781768297242\n",
-            "storage_cost_total = $45100.00\n",
-            "\n",
             "On 2024-10-10 00:00:00, the expected gas price is $12.10\n",
-            "Total storage costs: $48200.00\n",
-            "The contract is worth $152217.23\n",
+            "days_used to fill tank = 10\n",
+            "storage cost total after sell #5: $105900.00\n",
+            "\n",
+            "Total storage costs: $105900.00\n",
+            "\n",
+            "The contract is worth $134478.18 with PnL's minus storage costs\n",
             "\n"
           ]
         }
